storage/xtradb/include/os0sync.h
@@ -434,6 +434,9 @@ Returns the old value of *ptr, atomically sets *ptr to new_val */
 # define os_atomic_test_and_set_ulint(ptr, new_val) \
 	__sync_lock_test_and_set(ptr, new_val)
 
+# define os_atomic_lock_release_byte(ptr) \
+	__sync_lock_release(ptr)
+
 #elif defined(HAVE_IB_SOLARIS_ATOMICS)
 
 # define HAVE_ATOMIC_BUILTINS
@@ -514,6 +517,9 @@ Returns the old value of *ptr, atomically sets *ptr to new_val */
 
 # define os_atomic_test_and_set_ulint(ptr, new_val) \
 	atomic_swap_ulong(ptr, new_val)
+
+# define os_atomic_lock_release_byte(ptr) \
+	(void) atomic_swap_uchar(ptr, 0)
 
 #elif defined(HAVE_WINDOWS_ATOMICS)
 
@@ -636,6 +642,9 @@ clobbered */
 
 # define os_atomic_test_and_set_ulong(ptr, new_val) \
 	InterlockedExchange(ptr, new_val)
+
+# define os_atomic_lock_release_byte(ptr) \
+	(void) InterlockedExchange(ptr, 0)
 
 #else
 # define IB_ATOMICS_STARTUP_MSG \
